variables.Variables.scala.error
Erreur de compilation :
Variables:9: error: '(' expected but identifier found.
while nbPas > 0
      ^